# GenAI-Studio

./: .gitignore  README.md  package-lock.json  package.json
Backend/: main.py
Backend/SoundInsights/Backend/: app.py  company.py  routesfile.py  services.py
Backend/SoundInsights/Frontend/: README.md  package.json
Backend/SoundInsights/Frontend/public/: index.html
Backend/SoundInsights/Frontend/src/: App.css  App.js  Dashboard.js  FullAnalyticsData.jsx  Navbar.js  (+4 more)
Backend/agents/: yogesh.json
Backend/knowledgelens/: README.md  agent.py  agents.json  data_insertion.py  db.json  main.py  pyproject.toml  semantic_search.py  service.py  test.py
Backend/knowledgelens/uploads/: Manjeet - Singh.dox.docx  Pankaj Parihar.docx
Backend/voice_insights/: README.md  pyproject.toml  routesfile.py  services.py
Backend/voice_insights/Backend/: README.md  app.py  company.py  routesfile.py  services.py
Backend/voice_insights/Backend/agents/: second.json
Backend/voice_insights/Frontend/src/: App.css  App.js  CreateAgentModal.js  Dashboard.js  FullAnalyticsData.css  Navbar.css  Upload.js  index.js  useAuth.js
Backend/voice_insights/Frontend/src/component/: Company.jsx
Frontend/: README.md  package-lock.json  package.json  tailwind.config.js
Frontend/Voice_insights/: README.md  package-lock.json
Frontend/Voice_insights/src/: AgentDetail.css  AgentDetail.js  CreateAgentModal.css  Dashboard.css  FullAnalyticsData.jsx  Login.css  Login.js  createContext.js
Frontend/src/: App.js  Box.js  ChatPage.js  Detail.js  Footer.js  Header.js  Home.js  Sidebar.js  form.js
