[project]
name = "SoundScript" 
requires-python = ">=3.11"
version = "0.1.0" 
description = "An innovative project designed to break down communication barriers by transforming recorded audio calls into concise, English-language summaries with contextual analysis. Seamless solutions for different languages or hearing impairments. " 
readme = "README.md" 

dependencies = [
    "google-generativeai==0.8.5",
    "python-dotenv==1.1.0",
    "faster-whisper==1.1.1",
    "fastapi>=0.116.1",
    "python-multipart>=0.0.20",
]

[build-system]
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta" 
